# Secure-Password-Manager

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DATABASE_MIGRATION_FIX.md  DEPLOYMENT_TEST_GUIDE.md  Dockerfile  ENV_VARIABLE_FIX_ANALYSIS.md  FINAL_NEXT_STEPS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MFA_NETLIFY_TESTING_GUIDE.md  MFA_TESTING_GUIDE.md  NETLIFY_ENV_SETUP_GUIDE.md  PULL_REQUEST_TEMPLATE.md  README.md  TESTING_BRANCH_READY.md  compose.yaml  netlify.toml  package-lock.json  package.json  pull_request_template_ux005.md  pyproject.toml  test_mfa_integration.py
.github/: pull_request_template.md
.github/workflows/: backend-cd.yml  backend-ci.yml  e2e-tests.yml  frontend-ci.yml  (+1 more)
backend/: Dockerfile  app.py  create_test_user.py  requirements.txt  test_totp_fix.py
database/: db.py
frontend/: .env.development  .env.production  app.jsx  dockerfile  env.test  eslint.config.mjs  index.html  jest.config.js  manual_test_vault.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  test_vault_functionality.js  vite.config.js
scripts/: README.md  fix_encryption_salt_migration.py  run-e2e-tests.sh  security-audit.py  simple-security-audit.py  start-test-environment.sh
tests/: CROSS_ENV_TESTING.md  __init__.py  conftest.py  gcp_minimal_suite.sh  run_cross_env_tests.sh  test_argon2_service.py  test_auth_cross_env.py  test_auth_endpoints.py  test_auth_simple.py  test_frontend_components.py  test_input_validation_service.py  test_jwt_token.py  test_jwt_token_service.py  test_totp.py  test_totp_service.py
(+90 files in other folders)
