[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | frontend
  | tests
)/
'''

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-password-manager"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]
